# marc

./: .gitignore  LICENSE  README.md  cli.py  config.yaml.example  main.py  pyproject.toml  requirements.txt
src/: imap_client.py  local_backup.py  obsidian_writer.py  ollama_client.py  person_merger.py  state_manager.py  thread_builder.py
