[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "email-archiver"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "keyring>=24.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.scripts]
marc = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main"]
packages = ["src"]
